syntax = "proto3";
import "github.com/gogo/protobuf@v1.2.1/gogoproto/gogo.proto";

package ninka;
option go_package = "github.com/issho-ni/issho/api/ninka";

service Ninka {
    rpc CreateToken(TokenRequest) returns (Token) {}
    rpc ValidateToken(Token) returns (TokenResponse) {}
    rpc InvalidateToken(Token) returns (TokenResponse) {}
}

message TokenRequest {
    bytes userID = 1 [(gogoproto.customtype) = "github.com/issho-ni/issho/internal/pkg/uuid.UUID"];
}

message Token {
    string token = 1;
}

message TokenResponse {
    bytes userID = 1 [(gogoproto.customtype) = "github.com/issho-ni/issho/internal/pkg/uuid.UUID"];
    bool success = 2;
}
